loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:3: error: '<-' expected but integer literal found.
for(j 1<-28){
      ^LoopCourseForest:26: error: illegal start of simple expression
	}
        ^