loopfor.LoopCourseForest.scala.code
var tour=0
var qtour=0
for(j 1<-28){
  for (i 1<-4){
    avance()
  }
  gauche()
  for (i 1<-2){
    avance()
  }
  droite()
  for (i 1<-4){
    avance()
  }
  droite()
  for (i 1<-2){
    avance()
  }
  gauche()
  for (i 1<-4){
    avance()
  }
  gauche()
}